runFormatTest(import.meta, ["typescript"], {
  errors: { "babel-ts": true, "oxc-ts": true },
});
