// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`invalid-await.ts format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
namespace N {
  const x = await 42;
}

=====================================output=====================================
namespace N {
  const x = await 42;
}

================================================================================
`;

exports[`invalid-await.ts format[typescript]} 2`] = `
"'await' is only allowed within async functions and at the top levels of modules. (2:13)
  1 | namespace N {
> 2 |   const x = await 42;
    |             ^
  3 | }
  4 |
Cause: 'await' is only allowed within async functions and at the top levels of modules. (2:12)"
`;

exports[`invalid-await.ts format[typescript]} 3`] = `
"\`await\` is only allowed within async functions and at the top levels of modules (2:13)
  1 | namespace N {
> 2 |   const x = await 42;
    |             ^^^^^
  3 | }
  4 |"
`;
